--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:its.akhtar90@gmail.com">Email: Akhtar</a></li>
-        		  <li><a href="/https://github.com/makhtar17004">github.com/makhtar17004</a></li>
+        		  <li><a href="/https://github.com/makhtar17004">github.com/akhtarvision</a></li>
 				</ul>
 			</footer>
 		</body>
