--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,13 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 				<li><a href="#publications">Publications</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#experience">Experience</a></li>
+				<li><a href="#education">Education</a></li>
+				<li><a href="#services">Services</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
+				<li><a href="/flinks">Fav Links</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 				
 	    		</ul>
