--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<div class="navbar">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
@@ -21,6 +22,7 @@
 				
 	    		</ul>
 			</nav>
+			</div>
 			<div class="container">
 			
 			{{ content }}
