--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<div class="navbar">
-			<nav>
+			<nav class="navbar">
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 				<li><a href="#publications">Publications</a></li>
@@ -22,7 +21,7 @@
 				
 	    		</ul>
 			</nav>
-			</div>
+
 			<div class="container">
 			
 			{{ content }}
