--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
 				<li><a href="#publications">Publications</a></li>
 				<li><a href="#projects">Projects</a></li>
 				<li><a href="#experience">Experience</a></li>
-				<li><a href="#education">Education</a></li>
-				<li><a href="#services">Services</a></li>
+<!-- 				<li><a href="#education">Education</a></li> -->
+<!-- 				<li><a href="#services">Services</a></li> -->
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 				<li><a href="/flinks">Fav Links</a></li>
