--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:its.akhtar90@gmail.com">Email: Akhtar</a></li>
-        		  <li><a href="/https://github.com/makhtar17004">github.com/akhtarvision</a></li>
+	        		<li><a href="mailto:its.akhtar90@gmail.com">Email: its[dot]akhtar90[at]gmail[dot]com</a></li>
+        		  <li><a href="/https://github.com/akhtarvision">github.com/akhtarvision</a></li>
 				</ul>
 			</footer>
 		</body>
