--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
 				<li><a href="#experience">Experience</a></li>
 <!-- 				<li><a href="#education">Education</a></li> -->
 <!-- 				<li><a href="#services">Services</a></li> -->
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-				<li><a href="/flinks">Fav Links</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+		        	<li><a href="#about">About</a></li>
+	        		<li><a href="#cv">CV</a></li>
+				<li><a href="#flinks">Recommends</a></li>
+	        		<li><a href="#blog">Blog</a></li>
 				
 	    		</ul>
 			</nav>
@@ -27,11 +27,11 @@
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:its.akhtar90@gmail.com">Email: its[dot]akhtar90[at]gmail[dot]com</a></li>
-        		  <li><a href="/https://github.com/akhtarvision">github.com/akhtarvision</a></li>
-				</ul>
-			</footer>
+<!-- 			<footer> -->
+<!-- 	    		<ul> -->
+<!-- 	        		<li><a href="mailto:its.akhtar90@gmail.com">Email: its[dot]akhtar90[at]gmail[dot]com</a></li> -->
+<!--         		  <li><a href="/https://github.com/akhtarvision">Git: github.com/akhtarvision</a></li> -->
+<!-- 				</ul> -->
+<!-- 			</footer> -->
 		</body>
 	</html>
