--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 				<li><a href="#experience">Experience</a></li>
 <!-- 				<li><a href="#education">Education</a></li> -->
 <!-- 				<li><a href="#services">Services</a></li> -->
-		        	<li><a href="#about">About</a></li>
+<!-- 		        	<li><a href="#about">About</a></li> -->
 	        		<li><a href="#cv">CV</a></li>
 				<li><a href="#flinks">Recommends</a></li>
 	        		<li><a href="#blog">Blog</a></li>
