--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,21 +6,31 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<nav class="navbar">
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-				<li><a href="#publications">Publications</a></li>
-				<li><a href="#projects">Projects</a></li>
-				<li><a href="#experience">Experience</a></li>
+			<div class="navbar">
+<!-- 	    		<ul> -->
+<!-- 	        		<li><a href="/">Home</a></li> -->
+<!-- 				<li><a href="#publications">Publications</a></li> -->
+<!-- 				<li><a href="#projects">Projects</a></li> -->
+<!-- 				<li><a href="#experience">Experience</a></li> -->
 <!-- 				<li><a href="#education">Education</a></li> -->
 <!-- 				<li><a href="#services">Services</a></li> -->
 <!-- 		        	<li><a href="#about">About</a></li> -->
-	        		<li><a href="#cv">CV</a></li>
-				<li><a href="#flinks">Recommends</a></li>
-	        		<li><a href="#blog">Blog</a></li>
+<!-- 	        		<li><a href="#cv">CV</a></li> -->
+<!-- 				<li><a href="#flinks">Recommends</a></li> -->
+<!-- 	        		<li><a href="#blog">Blog</a></li> -->
+				
+<!-- 	    		</ul> -->
+				
+				<a href="/">Home</a>
+				<a href="#publications">Publications</a>
+				<a href="#projects">Projects</a>
+				<a href="#experience">Experience</a>
+	        		<a href="#cv">CV</a>
+				<a href="#flinks">Recommends</a>
+	        		<a href="#blog">Blog</a>
 				
 	    		</ul>
-			</nav>
+			</div>
 
 			<div class="container">
 			
