--- a/css/main.css
+++ b/css/main.css
@@ -85,25 +85,29 @@ address {
 /* The navigation bar */
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #001D81;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  width: 75%; /* Full width */
 }
 
 /* Links inside the navbar */
 .navbar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+/*   color: #f2f2f2; */
+color: #fff;
   text-align: center;
-  padding: 14px 16px;
+  font-family:'Arial', 'Sans-Serif';
+    font-weight: bold;
+    font-size: 1.5em;
+  padding: 10px 23.5px;
   text-decoration: none;
 }
 
 /* Change background on mouse-over */
 .navbar a:hover {
-  background: #ddd;
+  background: #fff;
   color: black;
 }
 
