--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
+    padding-top : 30px;
     font-size: 2.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     border-bottom: 2px solid #333
