--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 60px auto;
-    width: 63em;
+    width: 75%;
 /*     background-color: #000; */
 /*     background-color: gr; */
 background-image: linear-gradient(to right, #7CE4E4, #f2fcfe);
