--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 60px auto;
-    width: 75%;
+    width: 63rem;
 /*     background-color: #000; */
 /*     background-color: gr; */
 background-image: linear-gradient(to right, #7CE4E4, #f2fcfe);
@@ -95,7 +95,7 @@ address {
 
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
-  width: 63em; /* Full width */
+  width: 63rem; /* Full width */
 }
 
 /* Links inside the navbar */
