--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
-    width: 63rem;
+    width: 70%;
+/*     width: 63rem; */
 /*     background-color: #000; */
 /*     background-color: gr; */
 background-image: linear-gradient(to right, #7CE4E4, #f2fcfe);
@@ -92,10 +93,10 @@ address {
 /*   background-color: #001D81; */
 /*   background-color: #053A17; */
   background-image: linear-gradient(to left, #559897, #1A0445);
-
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
-  width: 63rem; /* Full width */
+/*   width: 63rem; /* Full width */ */
+  width: 70%; /* Full width */
 }
 
 /* Links inside the navbar */
