--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 60px auto;
-    width: 70%;
+    width: 60rem;
 /*     width: 63rem; */
 /*     background-color: #000; */
 /*     background-color: gr; */
@@ -95,7 +95,7 @@ address {
   background-image: linear-gradient(to left, #559897, #1A0445);
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
-  width: 70%; /* Full width */
+  width: 60rem; /* Full width */
 }
 
 /* Links inside the navbar */
