--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,10 @@ body {
     margin: 60px auto;
     width: 63rem;
     padding: 0 2rem;
-/*     width: 63rem; */
-/*     background-color: #000; */
-/*     background-color: gr; */
-    background-image: linear-gradient(to right, #7CE4E4, #f2fcfe);
+    /*     width: 63rem; */
+    /*     background-color: #000; */
+    /*     background-color: gr; */
+    background-image: linear-gradient(to right, #A4F2F1, #f2fcfe);
 }
 nav ul, footer ul {
     font-family:'Arial', 'Sans-Serif';
@@ -22,6 +22,7 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     display: inline-block;
     margin-right: 20px;
+/*     font-size: 1.3em; */
 /*     background-clip: padding-box; */
 }
 a {
@@ -33,18 +34,23 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    padding-top : 60px;
-    font-size: 2.5em;
+    padding-top : 6rem;
+    font-size: 2.4em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    border-bottom: 2px solid #333
+    border-bottom: 2px solid #000
 }
 p {
     text-align: justify;
-    font-size: 1.3em;
-    line-height: 1.2em;
+    font-size: 1.1em;
+    line-height: 1.3em;
     color: #000000;
-}
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 
+}
+li{
+  font-size: 1.1em;
+/*   font-family:'Helvetica', 'Arial', 'Sans-Serif'; */
+}
 h2 {
 /*     font-size: 2.5em; */
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -68,6 +74,7 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+/*     font-size: 1.8em; */
 }
 
 .roundImg {
@@ -76,9 +83,11 @@ ul.posts li {
 }
 
 address {
-    font-size: 1.1em;
-    font-family:'Sans-Serif';
+    font-size: 1.3em;
+/*     font-family: 'Helvetica', 'Arial', 'Sans-Serif'; */
+    font-family: 'Courier New', 'Lucida Console' , 'Monaco';
     font-weight: bold;
+    font-style: normal;
 }
 
 .social{
