--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,10 @@ ul.posts li {
 }
 
 address {
-    font-size: 1.3em;
-/*     font-family: 'Helvetica', 'Arial', 'Sans-Serif'; */
+    font-size: 1.0em;
+    font-family: 'Helvetica', 'Arial', 'Sans-Serif';
 /*     font-family: 'Courier New', 'Lucida Console' , 'Monaco'; */
-    font-family: 'CMU Sans Serif', 'Lucida Console' , 'Monaco';
+/*     font-family: 'CMU Sans Serif', 'Lucida Console' , 'Monaco'; */
 
     font-weight: bold;
     font-style: normal;
