--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
 				<a href="#projects">Projects</a>
 				<a href="#experience">Experience</a>
 	        		<a href="#cv">CV</a>
-				<a href="#flinks">Recommends</a>
-	        		<a href="#blog">Blog</a>
+<!-- 				<a href="#flinks">Recommends</a> -->
+<!-- 	        		<a href="#blog">Blog</a> -->
 				
 	    		</ul>
 			</div>
