--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 				
 				<a href="/">Home</a>
 				<a href="#publications">Publications</a>
-				<a href="#projects">Projects</a>
+<!-- 				<a href="#projects">Projects</a> -->
 				<a href="#experience">Experience</a>
 	        		<a href="#cv">CV</a>
 <!-- 				<a href="#flinks">Recommends</a> -->
