--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 				<a href="#publications">Publications</a>
 <!-- 				<a href="#projects">Projects</a> -->
 				<a href="#experience">Experience</a>
+				<a href="#people">People</a>
 	        		<a href="#cv">CV</a>
 <!-- 				<a href="#flinks">Recommends</a> -->
 <!-- 	        		<a href="#blog">Blog</a> -->
