--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,8 @@
 				<a href="#publications">Publications</a>
 				<a href="#people">People</a>
 <!-- 				<a href="#projects">Projects</a> -->
-				<a href="#experience">Experience</a>
+<!-- 				<a href="#experience">Experience</a> -->
+				<a href="#services">Services/Honors</a>
 	        		<a href="#cv">CV</a>
 <!-- 				<a href="#flinks">Recommends</a> -->
 <!-- 	        		<a href="#blog">Blog</a> -->
